Fix media query bug causing percentages to overflow at 800px

--- a/src/App.css
+++ b/src/App.css
@@ -481,7 +481,7 @@ button:hover{
  		padding:20px;
  	}
 	.percentages{
-		width:496px;
+		width:100%;
 	}
 	.slider{
 		width:402px;
